# introduction-django-api

./: Dockerfile  README.md  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: python-app.yml
app_settings/: asgi.py  settings.py  urls.py  wsgi.py
introduction_api/apps/user/: apps.py  models.py  serializers.py  urls.py  views.py
introduction_api/apps/user/migrations/: 0001_initial.py
introduction_api/common/: enums.py  models.py
